add a simply way for generating a html report
This commit adds a mustache template which currently only has an
iteration of the licenses. When we have the actual html template we can
move and itertion to the proper location and add additional information
required.

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "decomment": "^0.8.8",
     "js2xmlparser": "^3.0.0",
     "license-checker": "^11.0.0",
+    "mustache": "^2.3.0",
     "node-builtins": "^0.1.1",
     "yargs": "^8.0.2"
   },
