--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ branches:
   only:
     - master
 after_success:
+  - npm run coverage
   - cat ./coverage/lcov.info | coveralls
 notifications:
   irc: "chat.freenode.net#brass-monkey"
