--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "tape test/*.js | tap-spec",
-    "coverage": "istanbul cover tape -- test/*.js",
+    "coverage": "nyc report --reporter=text-lcov > ./coverage/lcov.info",
     "lint": "eslint test/*.js index.js lib/*.js",
     "docs": "./node_modules/.bin/jsdoc --verbose -d docs -t ./node_modules/ink-docstrap/template -R README.md index.js ./lib/*.js",
     "prepublish": "nsp check",
@@ -42,6 +42,7 @@
     "ink-docstrap": "^1.3.0",
     "jsdoc": "^3.4.2",
     "nsp": "^2.6.1",
+    "nyc": "^11.0.2",
     "standard-version": "^3.0.0",
     "tap-spec": "^4.1.1",
     "tape": "^4.6.0",
