--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Licenser gathers licence information and reports them in various formats.",
   "main": "index.js",
   "scripts": {
-    "test": "tape test/*.js | tap-spec",
+    "test": "nyc tape test/*.js | tap-spec",
     "coverage": "nyc report --reporter=text-lcov > ./coverage/lcov.info",
     "lint": "eslint test/*.js index.js lib/*.js",
     "docs": "./node_modules/.bin/jsdoc --verbose -d docs -t ./node_modules/ink-docstrap/template -R README.md index.js ./lib/*.js",
