src: add xml merging support (#6)
To motivation for this commit is to be able to merge multiple
license.xml files for individual projects. For products that include
multiple projects this will allow for the creation of a single xml that
includes all the subproject licenses.

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "js2xmlparser": "^3.0.0",
     "license-checker": "^11.0.0",
     "mustache": "^2.3.0",
+    "xml2js": "^0.4.17",
     "yargs": "^8.0.2"
   },
   "license": "Apache-2.0",
