--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "licenser",
+  "name": "license-reporter",
   "version": "0.1.0",
-  "description": "Licenser gathers licence information and reports them in various formats.",
+  "description": "License-reporter gathers license information and reports them in various formats.",
   "main": "index.js",
   "scripts": {
     "test": "nyc tape test/*.js | tap-spec",
@@ -21,7 +21,7 @@
   "author": "Bucharest-gold",
   "repository": {
     "type": "git",
-    "url": "bucharest-gold/licenser"
+    "url": "bucharest-gold/license-reporter"
   },
   "dependencies": {
     "js2xmlparser": "^3.0.0",
@@ -49,6 +49,6 @@
   },
   "preferGlobal": true,
   "bin": {
-    "licenser": "./bin/licenser"
+    "licenser": "./bin/license-reporter"
   }
 }
