--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "js2xmlparser": "^3.0.0",
     "license-checker": "^13.0.1",
     "mustache": "^2.3.0",
+    "sync-request": "^4.1.0",
     "xml2js": "^0.4.17",
     "yargs": "^8.0.2"
   },
@@ -42,6 +43,7 @@
     "jsdoc": "^3.4.2",
     "nsp": "^2.6.1",
     "nyc": "^11.0.2",
+    "proxyquire": "^1.8.0",
     "standard-version": "^3.0.0",
     "tap-spec": "^4.1.1",
     "tape": "^4.6.0",
