src: reduce functions exported by unified-list
Currently there are a few functions that are only exported for testing
purposes. This commit suggests using rewire in the unit test and remove
the exported functions.

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "nsp": "^2.6.1",
     "nyc": "^11.0.2",
     "proxyquire": "^1.8.0",
+    "rewire": "^2.5.2",
     "standard-version": "^3.0.0",
     "tap-spec": "^4.1.1",
     "tape": "^4.6.0",
