fix: build failure

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "license": "Apache-2.0",
   "devDependencies": {
+    "blue-tape": "^1.0.0",
     "eslint": "^3.5.0",
     "eslint-config-semistandard": "^7.0.0",
     "eslint-config-standard": "^6.0.0",
