--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mustache": "^2.3.0",
     "sync-request": "^4.1.0",
     "xml2js": "^0.4.17",
+    "yamljs": "^0.3.0",
     "yargs": "^8.0.2"
   },
   "license": "Apache-2.0",
