build: update travis-ci to notify #bucharest-gold

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,4 @@ after_success:
   - npm run coverage
   - cat ./coverage/lcov.info | coveralls
 notifications:
-  irc: "chat.freenode.net#brass-monkey"
+  irc: "chat.freenode.net#bucharest-gold"
