--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "ink-docstrap": "^1.3.0",
     "jsdoc": "^3.5.5",
     "nsp": "^2.8.1",
-    "nyc": "^11.3.0",
+    "nyc": "11.0.2",
     "proxyquire": "^1.8.0",
     "rewire": "^2.5.2",
     "standard-version": "^3.0.0",
