--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "License-reporter gathers license information and reports them in various formats.",
   "main": "index.js",
   "scripts": {
-    "test": "nyc --check-coverage --lines 90 tape test/*.js | tap-spec",
+    "test": "nyc --check-coverage --lines 90 tape test/lib/*.js | tap-spec",
     "coverage": "nyc report --reporter=text-lcov > ./coverage/lcov.info",
-    "lint": "eslint test/*.js index.js lib/*.js bin/*.js",
+    "lint": "eslint test/lib/*.js index.js lib/modules/*.js lib/commands/*.js bin/*.js",
     "docs": "./node_modules/.bin/jsdoc --verbose -d docs -t ./node_modules/ink-docstrap/template -R README.md index.js ./lib/*.js",
     "prepublishOnly": "nsp check",
     "release": "standard-version"
@@ -25,13 +25,14 @@
   },
   "dependencies": {
     "graceful-fs": "^4.1.11",
+    "js-yaml": "^3.10.0",
     "js2xmlparser": "^3.0.0",
     "jsonschema": "^1.2.0",
     "license-checker": "^13.1.0",
     "mustache": "^2.3.0",
+    "require-dir": "^0.3.2",
     "sync-request": "^4.1.0",
     "xml2js": "^0.4.19",
-    "yamljs": "^0.3.0",
     "yargs": "^8.0.2"
   },
   "license": "Apache-2.0",
@@ -56,6 +57,6 @@
   },
   "preferGlobal": true,
   "bin": {
-    "license-reporter": "./bin/license-reporter"
+    "license-reporter": "bin/cmd.js"
   }
 }
