--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "require-dir": "^0.3.2",
     "sync-request": "^4.1.0",
     "xml2js": "^0.4.19",
-    "yargs": "^10.0.3"
+    "yargs": "8.0.2"
   },
   "license": "Apache-2.0",
   "devDependencies": {
