--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jsonschema": "^1.2.0",
     "license-checker": "^15.0.0",
     "mustache": "^2.3.0",
+    "node-project-validator": "^0.1.3",
     "require-dir": "^0.3.2",
     "sync-request": "^4.1.0",
     "xml2js": "^0.4.19",
