--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "require-dir": "^0.3.2",
     "sync-request": "^4.1.0",
     "xml2js": "^0.4.19",
-    "yargs": "8.0.2"
+    "yargs": "^11.0.0"
   },
   "license": "Apache-2.0",
   "devDependencies": {
