--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,11 @@
 language: node_js
 node_js:
   - "8"
-  - "9"
-before_script:
-  - npm install -g coveralls
 script:
-   - npm install
-   - npm run lint
-   - npm test
+   - npm run ci
 branches:
   only:
     - master
     - /^greenkeeper/.*$/
-after_success:
-  - npm run coverage
-  - cat ./coverage/lcov.info | coveralls
 notifications:
   irc: "chat.freenode.net#bucharest-gold"
