--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "License-reporter gathers license information and reports them in various formats.",
   "main": "index.js",
   "scripts": {
-    "test": "nyc --check-coverage --lines 90 tape test/lib/*.js | tap-spec",
-    "coverage": "nyc report --reporter=text-lcov > ./coverage/lcov.info",
+    "test": "tape test/lib/*.js | tap-spec",
+    "coverage": "nyc npm test",
+    "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
+    "ci": "npm run lint && npm run coveralls",
     "lint": "eslint --fix test/lib/*.js index.js lib/modules/*.js lib/commands/*.js lib/utils/*.js bin/*.js",
     "docs": "./node_modules/.bin/jsdoc --verbose -d docs -t ./node_modules/ink-docstrap/template -R README.md index.js ./lib/*.js",
     "prepublishOnly": "nsp check",
@@ -38,6 +40,7 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "blue-tape": "^1.0.0",
+    "coveralls": "^3.0.0",
     "eslint": "^4.18.0",
     "eslint-config-semistandard": "^12.0.0",
     "eslint-config-standard": "^11.0.0",
