--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "license-checker": "^17.0.0",
     "mustache": "^2.3.0",
     "node-project-validator": "^0.1.3",
-    "sync-request": "^4.1.0",
+    "sync-request": "4.1.0",
     "xml2js": "^0.4.19",
     "yargs": "^11.0.0"
   },
