--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "coverage": "nyc npm test",
     "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
     "ci": "npm run lint && npm run coveralls",
-    "lint": "eslint --fix test/lib/*.js index.js lib/modules/*.js lib/commands/*.js lib/utils/*.js bin/*.js",
+    "lint": "eslint --fix test/lib/*.js index.js lib/modules/*.js lib/commands/*.js lib/utils/*.js",
     "docs": "./node_modules/.bin/jsdoc --verbose -d docs -t ./node_modules/ink-docstrap/template -R README.md index.js ./lib/*.js",
     "prepublishOnly": "nsp check",
     "release": "standard-version"
@@ -27,36 +27,35 @@
   },
   "dependencies": {
     "graceful-fs": "^4.1.11",
-    "js-yaml": "^3.10.0",
+    "js-yaml": "^3.12.0",
     "js2xmlparser": "^3.0.0",
-    "jsonschema": "^1.2.0",
-    "license-checker": "^19.0.0",
+    "jsonschema": "^1.2.4",
+    "license-checker": "^20.1.0",
     "mustache": "^2.3.0",
     "node-project-validator": "^0.1.3",
     "sync-request": "4.1.0",
     "xml2js": "^0.4.19",
-    "yargs": "^11.0.0"
+    "yargs": "^12.0.1"
   },
   "license": "Apache-2.0",
   "devDependencies": {
     "blue-tape": "^1.0.0",
-    "coveralls": "^3.0.0",
-    "eslint": "^4.18.0",
-    "eslint-config-semistandard": "^12.0.0",
-    "eslint-config-standard": "^11.0.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-node": "^6.0.0",
+    "coveralls": "^3.0.2",
+    "eslint": "^5.1.0",
+    "eslint-config-semistandard": "^12.0.1",
+    "eslint-config-standard": "^12.0.0-alpha.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-react": "^7.5.1",
-    "eslint-plugin-standard": "^3.0.1",
-    "nsp": "^3.1.0",
-    "nyc": "11.7.1",
-    "proxyquire": "^2.0.0",
+    "eslint-plugin-standard": "^3.1.0",
+    "nsp": "^3.2.1",
+    "nyc": "12.0.2",
+    "proxyquire": "^2.0.1",
     "rewire": "^4.0.0",
-    "standard-version": "^4.2.0",
-    "tap-spec": "^4.1.1",
-    "tape": "^4.8.0",
-    "test-console": "^1.0.0"
+    "standard-version": "^4.4.0",
+    "tap-spec": "^5.0.0",
+    "tape": "^4.9.1",
+    "test-console": "^1.1.0"
   },
   "preferGlobal": true,
   "bin": {
