src: using snyk instead nsp and added node 10 to the build

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "ci": "npm run lint && npm run coveralls",
     "lint": "eslint --fix test/lib/*.js index.js lib/modules/*.js lib/commands/*.js lib/utils/*.js",
     "docs": "./node_modules/.bin/jsdoc --verbose -d docs -t ./node_modules/ink-docstrap/template -R README.md index.js ./lib/*.js",
-    "prepublishOnly": "nsp check",
+    "postinstall": "snyk test",
     "release": "standard-version"
   },
   "files": [
@@ -25,32 +25,32 @@
     "url": "git+https://github.com/nodeshift/license-reporter.git"
   },
   "dependencies": {
-    "graceful-fs": "^4.1.11",
+    "graceful-fs": "^4.1.15",
     "js-yaml": "^3.12.0",
     "js2xmlparser": "^3.0.0",
     "jsonschema": "^1.2.4",
-    "license-checker": "^21.0.0",
-    "mustache": "^3.0.0",
+    "license-checker": "^24.0.1",
+    "mustache": "^3.0.1",
     "node-project-validator": "^0.1.3",
     "sync-request": "4.1.0",
     "xml2js": "^0.4.19",
-    "yargs": "^12.0.2"
+    "yargs": "^12.0.5"
   },
   "license": "Apache-2.0",
   "devDependencies": {
     "blue-tape": "^1.0.0",
     "coveralls": "^3.0.2",
-    "eslint": "^5.1.0",
-    "eslint-config-semistandard": "^12.0.1",
+    "eslint": "^5.9.0",
+    "eslint-config-semistandard": "^13.0.0",
     "eslint-config-standard": "^12.0.0-alpha.0",
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-node": "^8.0.0",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
-    "nsp": "^3.2.1",
-    "nyc": "12.0.2",
+    "nyc": "13.1.0",
     "proxyquire": "^2.0.1",
     "rewire": "^4.0.0",
+    "snyk": "^1.110.2",
     "standard-version": "^4.4.0",
     "tap-spec": "^5.0.0",
     "tape": "^4.9.1",
