--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,14 @@
 language: node_js
+
 node_js:
-  - "8"
-  - "10"
+  - lts/*
+  - 10
+
 script:
-   - npm install
    - npm run lint
    - npm test
    - npm run coveralls
+
 branches:
   only:
     - master
