--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "README.md",
     "lib"
   ],
+  "engines": {
+    "node": ">= 10"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/nodeshift/license-reporter.git"
