--- a/.github/workflows/nodejs-ci-action.yml
+++ b/.github/workflows/nodejs-ci-action.yml
@@ -25,6 +25,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
-    - run: npx npm-audit-ci-wrapper -t low
+    - run: npx npm-audit-ci-wrapper -t moderate
     - run: npm run build --if-present
     - run: npm test 
