--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lib"
   ],
   "engines": {
-    "node": ">= 10"
+    "node": "^14 || ^12 || ^10"
   },
   "repository": {
     "type": "git",
@@ -34,7 +34,7 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "coveralls": "^3.1.0",
-    "jest": "^24.9.0",
+    "jest": "^26.5.2",
     "proxyquire": "^2.1.3",
     "rewire": "^5.0.0",
     "semistandard": "^13.0.1"
