--- a/.github/workflows/nodejs-ci-action.yml
+++ b/.github/workflows/nodejs-ci-action.yml
@@ -28,3 +28,6 @@ jobs:
     - run: npx npm-audit-ci-wrapper -t moderate
     - run: npm run build --if-present
     - run: npm test 
+    - run: npm run coverage
+    - run: echo 'repo_token:' ${{ secrets.COVERALLS_GITHUB_TOKEN }} > ./.coveralls.yml
+    - run: cat coverage/lcov.info | node_modules/coveralls/bin/coveralls.js
