--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "watch-test": "jest --watch",
-    "coveralls": "jest --coverage && cat ./coverage/lcov.info | coveralls",
+    "coverage": "jest --coverage",
     "lint": "semistandard --fix test/lib/*.js index.js lib/modules/*.js lib/commands/*.js lib/utils/*.js"
   },
   "files": [
@@ -33,7 +33,7 @@
   },
   "license": "Apache-2.0",
   "devDependencies": {
-    "coveralls": "^3.1.0",
+    "coveralls": "3.0.0",
     "jest": "^26.5.2",
     "proxyquire": "^2.1.3",
     "rewire": "^5.0.0",
