--- a/.github/workflows/nodejs-ci-action.yml
+++ b/.github/workflows/nodejs-ci-action.yml
@@ -31,3 +31,4 @@ jobs:
     - run: npm run coverage
     - run: echo 'repo_token:' ${{ secrets.COVERALLS_GITHUB_TOKEN }} > ./.coveralls.yml
     - run: cat coverage/lcov.info | node_modules/coveralls/bin/coveralls.js
+    - run: npx @pkgjs/support validate
