--- a/package.json
+++ b/package.json
@@ -22,27 +22,26 @@
     "url": "git+https://github.com/nodeshift/license-reporter.git"
   },
   "dependencies": {
-    "js-yaml": "^3.14.1",
+    "axios": "^0.21.1",
+    "js-yaml": "^4.1.0",
     "js2xmlparser": "^4.0.1",
     "jsonschema": "^1.2.9",
-    "license-checker": "^24.0.1",
-    "mustache": "^3.2.1",
+    "license-checker": "^25.0.1",
+    "mustache": "^4.2.0",
     "node-project-validator": "^0.1.3",
-    "sync-request": "4.1.0",
     "xml2js": "^0.4.23",
-    "yargs": "^13.3.2"
+    "yargs": "^17.1.0"
   },
   "license": "Apache-2.0",
   "devDependencies": {
-    "eslint": "^7.13.0",
-    "eslint-config-semistandard": "^15.0.1",
-    "eslint-config-standard": "^16.0.1",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint": "^7.32.0",
+    "eslint-config-semistandard": "^16.0.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.1.0",
-    "husky": "^5.1.3",
-    "jest": "^26.5.3",
+    "eslint-plugin-promise": "^5.1.0",
+    "husky": "^7.0.1",
+    "jest": "^27.0.6",
     "proxyquire": "^2.1.3",
     "rewire": "^5.0.0"
   },
