--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "jest",
     "watch-test": "jest --watch",
     "coverage": "jest --coverage",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "release": "standard-version"
   },
   "files": [
     "bin",
@@ -43,7 +44,8 @@
     "husky": "^7.0.1",
     "jest": "^27.0.6",
     "proxyquire": "^2.1.3",
-    "rewire": "^5.0.0"
+    "rewire": "^5.0.0",
+    "standard-version": "^9.3.1"
   },
   "preferGlobal": true,
   "bin": {
