--- a/.github/workflows/nodejs-ci-action.yml
+++ b/.github/workflows/nodejs-ci-action.yml
@@ -25,8 +25,10 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test 
+    - name: Checking JS types
+      run: npm run check
+      continue-on-error: true
+    - run: npm test
     - run: npm run coverage
     - name: Coveralls Parallel
       uses: coverallsapp/github-action@master
