--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "watch-test": "jest --watch",
     "coverage": "jest --coverage",
     "prepare": "husky install",
-    "release": "standard-version"
+    "release": "standard-version",
+    "check": "tsc --noEmit true"
   },
   "files": [
     "bin",
@@ -35,6 +36,7 @@
   },
   "license": "Apache-2.0",
   "devDependencies": {
+    "@types/node": "^16.11.11",
     "eslint": "^7.32.0",
     "eslint-config-semistandard": "^16.0.0",
     "eslint-config-standard": "^16.0.3",
@@ -43,9 +45,11 @@
     "eslint-plugin-promise": "^5.1.0",
     "husky": "^7.0.1",
     "jest": "^27.0.6",
+    "jsdoc": "^3.6.7",
     "proxyquire": "^2.1.3",
     "rewire": "^5.0.0",
-    "standard-version": "^9.3.1"
+    "standard-version": "^9.3.1",
+    "typescript": "^4.5.2"
   },
   "preferGlobal": true,
   "bin": {
